springdemo/yaml/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springdemo
  labels:
    app: springdemo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: springdemo
